onDelete and onGetImages now refresh page, Still fixing css for image that are too tall vertically

--- a/src/index.scss
+++ b/src/index.scss
@@ -9,8 +9,8 @@ li {
 }
 
 img {
-  height: 300px;
-  width: 300px;
+  height: 100%;
+  width: 100%;
   margin: 0;
   position: absolute;
   top: 50%;
@@ -18,14 +18,26 @@ img {
   transform: translateY(-50%);
 }
 
-.img_container {
+// .image {
+//   height: 250px;
+//   width: 300px;
+// }
+
+.image_background {
+  background-color: gray;
   height: 250px;
   width: 300px;
-  background-color: gray;
+  border: 3px solid green;
+}
+
+.img_container {
+  max-height: 250px;
+  max-width: 300px;
+  // background-color: gray;
   // border: 2px solid black;
   margin: 0 auto;
   position: relative;
-  border: 3px solid green;
+  // border: 3px solid green;
 }
 
 .img_bar {
